# XLMate

./: PR_SUMMARY.md  WEBSOCKET_FIX.md  docker-compose.yml  package-lock.json
.github/workflows/: backend.yml
agent-engines/: README.md  index.ts  main.py  orchestrator_service.test.ts  orchestrator_service.ts
agent-engines/gpu_worker/: models.py  training_pipeline.py
backend/: .env.example  .env.test  Cargo.toml  README.md
backend/modules/: Cargo.toml
backend/modules/api/: API_DOCUMENTATION_GUIDE.md  Cargo.toml  README.md  openapi.yaml  test_117069.db
backend/modules/api/scripts/: generate-client-sdks.sh
backend/modules/api/src/: ai.rs  auth.rs  games.rs  lib.rs  metrics.rs  metrics_tests.rs  openapi.rs  pgn_archive.rs  pgn_archive_api.rs  server.rs  test_players.rs  ws.rs
backend/modules/api/src/test/: auth_tests.rs  mod.rs
backend/modules/chess/src/: rating.rs
backend/modules/chess/tests/: board_tests.rs  time_control_tests.rs
backend/modules/db/: Cargo.toml
backend/modules/db/entity/: mod.rs
backend/modules/db/entity/src/: game.rs  lib.rs  refresh_token.rs  session.rs
backend/modules/db/entity/tests/: game_smoke_test.rs
backend/modules/db/migrations/src/: lib.rs  m20250428_121011_create_players_table.rs  m20250429_163843_create_games_table.rs  m20250429_192832_add_common_indexes.rs  m20250604_160341_create_games_and_moves.rs  m20250627_160000_create_time_control_table.rs  m20260121_000001_create_refresh_tokens_table.rs  m20260124_000001_add_player_details.rs  m20260224_000000_create_sessions_table.rs  m20260428_100000_add_historical_search_indexes.rs
backend/modules/db/src/: db.rs  lib.rs  test_helpers.rs
backend/modules/dto/: Cargo.toml
backend/modules/dto/src/: auth.rs  games.rs  players.rs
backend/modules/error/src/: error.rs
backend/modules/matchmaking/: models.rs  service.rs
backend/modules/security/: Cargo.toml
backend/modules/security/src/: jwt.rs  lib.rs  main.rs  session_service.rs  token_service.rs
backend/modules/service/: Cargo.toml  TIMEOUT_DAEMON.md
backend/modules/service/src/: engine_service.rs  games.rs  lib.rs  players.rs  test_service.rs  timeout_daemon.rs
backend/modules/service/tests/: timeout_daemon_tests.rs
backend/modules/src/services/: game_services.rs
backend/modules/src/tests/: game_creation.rs
backend/modules/st_core/: Cargo.toml
backend/modules/st_core/src/: endpoint.rs  event_listener.rs  lib.rs
backend/modules/tournament/: Cargo.toml
backend/modules/tournament/src/: bracket.rs
backend/modules/validation/: Cargo.toml
backend/modules/validation/src/: lib.rs
backend/scripts/: verify-ci.sh
backend/src/services/: elo.service.test.ts  elo.service.ts
backend/src/socket/: Cargo.toml  game.rs  main.rs  models.rs
contracts/: .gitignore  Cargo.toml  README.md
contracts/dao_contract/: Cargo.toml  README.md  Readme.md
contracts/dao_contract/src/: error.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/game_contract/: Cargo.toml  DEPLOYMENT.md  README.md  deploy.sh  test.sh
contracts/game_contract/src/: game_state.rs  lib.rs  test.rs
frontend/: ContributionGuideline.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/__tests__/: AiPersonalityModal.test.tsx  spectatorUtils.test.ts  useSpectatorSocket.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/puzzles/: page.tsx
frontend/app/tournament/: page.tsx
frontend/components/: ClientRoot.tsx  ConnectWalletButton.tsx  GameModeButtons.tsx  GameSidebar.tsx  Header.tsx  SignInModal.tsx  WalletConnectModal.tsx
frontend/components/chess/: CheatDetectionPanel.tsx  ChessboardComponent.tsx  StockfishWASM.tsx
frontend/components/dashboard/: RecentMatches.tsx
frontend/components/utils/: Connector.tsx
frontend/components/watch/: SpectatorMoveList.tsx
frontend/components/wip-landing/: Footer.tsx  HeroSection.tsx  (+6 more)
frontend/context/: walletContext.tsx
frontend/hook/: useCheatDetection.ts  useChessSocket.ts  useMatchmaking.ts
frontend/types/: react-icons.d.ts
(+38 files in other folders)
