[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4"
actix-web = "4"
actix = "0.13"
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
validator = { version = "0.16", features = ["derive"] }
validator_types = "0.16"
jsonwebtoken = "9.3.1"
db = { path = "../db" }
dto = { path = "../dto" }
service = { path = "../service" }
error = { path = "../error" }
security = { path = "../security" }
actix-cors = "0.7.0"
utoipa-redoc = { version = "3", features = ["actix-web"] }
entity = { path = "../db/entity", package = "db_entity" }
