[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
dotenv = "0.15.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }

# Added for seeder
db_entity = { path = "./entity" } # Corrected package name and path
tokio = { version = "1", features = ["full"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
